--- a/chongwudaily/miniprogram/pages/dangan/dangan.wxml
+++ b/chongwudaily/miniprogram/pages/dangan/dangan.wxml
@@ -20,7 +20,7 @@
         </view>
     </view>
     <view class="tian">
-        <van-button bind:click="to_jia" round color="linear-gradient(to right,rgb(255, 115, 90), rgb(255, 187, 0))" custom-style=" width: 670rpx;height: 80rpx;" icon="plus">
+        <van-button bind:click="to_jia" round color="linear-gradient(to right,rgba(255, 115, 90,0.85), rgba(255, 187, 0,0.85))" custom-style=" width: 670rpx;height: 80rpx;" icon="plus">
             添 加
         </van-button>
     </view>
