--- a/chongwudaily/miniprogram/pages/tijian_note/tijian_note.wxss
+++ b/chongwudaily/miniprogram/pages/tijian_note/tijian_note.wxss
@@ -75,7 +75,7 @@
     font-size: 13px;
     text-align: center;
     color: #fff;
-    background-color: #ff8e38;
+    background-color: rgba(255, 142, 56, 0.85);
 }
 
 .item_right0 {
@@ -95,4 +95,25 @@
     height: 90px;
     border-radius: 5px;
     background-color: #505050;
+}
+
+.add{
+    width: 100rpx;
+    height: 100rpx;
+    border-radius: 50%;
+    overflow: hidden;
+    background-color:rgba(255, 142, 56, 0.8);
+    font-size: 12px;
+    color: #ffffff;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    right: 50rpx;
+    bottom: 130rpx;
+}
+.pic_add{
+    width: 35rpx;
+    height: 35rpx;
 }
