--- a/chongwudaily/miniprogram/pages/xizao_note/xizao_note.wxml
+++ b/chongwudaily/miniprogram/pages/xizao_note/xizao_note.wxml
@@ -9,7 +9,6 @@
     </view>
     <view class="push" bindtap="to_bianji">
         <view class="item_left">
-            <view class="pinpai">国产百斯特</view>
             <view class="fan">反应良好</view>
         </view>
         <view class="item_right1">
@@ -31,4 +30,9 @@
         <view class="pic"></view>
         <view class="pic"></view> -->
     </view>
+</view>
+
+<view class="add" bindtap="to_xizao">
+    <image src="../../img/j2.png" class="pic_add" />
+    <text >添加</text>
 </view>
