--- a/chongwudaily/miniprogram/pages/yaoyu_note/yaoyu_note.wxml
+++ b/chongwudaily/miniprogram/pages/yaoyu_note/yaoyu_note.wxml
@@ -32,3 +32,7 @@
         <view class="pic"></view> -->
     </view>
 </view>
+<view class="add" bindtap="to_yaoyu">
+    <image src="../../img/j2.png" class="pic_add" />
+    <text >添加</text>
+</view>
