--- a/chongwudaily/miniprogram/pages/dangan/dangan.wxss
+++ b/chongwudaily/miniprogram/pages/dangan/dangan.wxss
@@ -74,9 +74,23 @@
     color: #999999;
 
 }
-.tian {
+.add{
+    width: 100rpx;
+    height: 100rpx;
+    border-radius: 50%;
+    overflow: hidden;
+    background-color:rgba(255, 142, 56, 0.8);
+    font-size: 12px;
+    color: #ffffff;
     display: flex;
-    align-items: center;
+    flex-direction: column;
     justify-content: center;
-    padding: 3vh 0 3vh 0;
+    align-items: center;
+    position: fixed;
+    right: 50rpx;
+    bottom: 130rpx;
+}
+.pic_add{
+    width: 35rpx;
+    height: 35rpx;
 }
