--- a/chongwudaily/miniprogram/pages/yimiao/yimiao.wxss
+++ b/chongwudaily/miniprogram/pages/yimiao/yimiao.wxss
@@ -3,31 +3,59 @@
     background-color: #ffffff;
     color: #333;
 }
+
 .value-class {
     flex: none !important;
 }
 
-.xuan{
+.xuan {
     margin: 2vh 0 2vh 0;
 }
-.zhu{
+
+.zhu {
     margin: 1vh 0 2vh 0;
 }
-.hou{
+
+.hou {
     margin: 1vh 0 2vh 0;
 }
-.xia{
+
+.xia {
     margin: 1vh 0 2vh 0;
 }
-.pin{
+
+.pin {
     margin: 1vh 0 2vh 0;
 }
-.biao{
+
+.biao {
     margin: 1vh 0 1vh 0;
 }
-.ti{
+
+.ti {
     margin: 1vh 0 1vh 0;
 }
+
+/* 禁用完成按钮 */
+.miao_jin {
+    height: 7vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 3vh 0 3vh 0;
+}
+
+.yi_jin {
+    width: 670rpx;
+    height: 80rpx;
+    font-size: 14px;
+    line-height: 80rpx;
+    text-align: center;
+    color: rgba(50, 50, 50, 0.3);
+    border-radius: 50px;
+    background-image:linear-gradient(to right, rgba(255, 115, 90, 0.3), rgba(255, 187, 0, 0.3));
+}
+
 /* 完成按钮 */
 .miao {
     height: 7vh;
