--- a/chongwudaily/miniprogram/pages/yimiao_note/yimiao_note.wxml
+++ b/chongwudaily/miniprogram/pages/yimiao_note/yimiao_note.wxml
@@ -9,8 +9,8 @@
     </view>
     <view class="push" bindtap="to_bianji">
         <view class="item_left">
-            <view class="pinpai">国产百斯特</view>
-            <view class="fan">反应良好</view>
+            <view class="pinpai">{{item.id_pai}}</view>
+            <view class="fan">反应{{item.fan_zhu}}</view>
         </view>
         <view class="item_right1">
             <van-count-down use-slot time="{{ time }}" bind:change="onChange">
