--- a/chongwudaily/miniprogram/pages/meirong_note/meirong_note.wxml
+++ b/chongwudaily/miniprogram/pages/meirong_note/meirong_note.wxml
@@ -1,15 +1,15 @@
 <!--miniprogram/pages/meirong_note/meirong_note.wxml-->
-<view class="note">
+<view class="note" wx:for="{{arrmeirong}}" wx:key="id">
     <view class="cw_info" slot="header" bindtap="to_bianji">
         <image class="cw-avatar"></image>
         <view class="head">
-            <text class="cw-nickname">超级大黄</text>
-            <text class="now_time">2020-03-21 16:35</text>
+            <text class="cw-nickname">{{item.xuan_chong}}</text>
+            <text class="now_time">{{item.xi_time}}</text>
         </view>
     </view>
     <view class="push" bindtap="to_bianji">
         <view class="item_left">
-            <view class="fan">反应良好</view>
+            <view class="fan">{{item.fan_hou}}</view>
         </view>
         <view class="item_right1">
             <van-count-down use-slot time="{{ time }}" bind:change="onChange">
@@ -26,9 +26,6 @@
     </view>
     <view class="pic_miao">
         <van-uploader file-list="{{ fileList }}" preview-size="193rpx" disabled max-count="3" deletable="{{false}}" />
-        <!-- <view class="pic"></view>
-        <view class="pic"></view>
-        <view class="pic"></view> -->
     </view>
 </view>
 <view class="add" bindtap="to_meirong">
