--- a/chongwudaily/miniprogram/pages/yimiao_bian/yimiao_bian.wxml
+++ b/chongwudaily/miniprogram/pages/yimiao_bian/yimiao_bian.wxml
@@ -1,31 +1,36 @@
-<!--miniprogram/pages/yimiao_bian/yimiao_bian.wxml-->
+<!-- miniprogram/pages/yimiao_bian/yimiao_bian.wxml -->
 <view class="con_yimiao">
+    <!-- 宠物 -->
     <view class="xuan">
-        <van-cell title="选择宠物" value="" clickable center bind:click="openchong" border="{{ false }}" />
+        <van-cell title="选择宠物" value="{{xuan_chong}}" clickable center bind:click="openchong" border="{{ false }}" />
     </view>
     <van-popup round overlay-style="background-color:rgba(0,0,0,0.3)" show="{{ xuan_popup }}" position="bottom" bind:close="closechong">
-        <van-picker show-toolbar columns="{{ chong_columns }}" bind:cancel="chong_cancel" bind:confirm="chong_confirm" />
+        <van-picker show-toolbar columns="{{ chong_columns }}" bind:cancel="closechong" bind:confirm="chong_confirm" />
     </van-popup>
+    <!-- 注射 -->
     <view class="zhu">
-        <van-cell title="注射时间" value="" clickable center bind:click="openzhu" border="{{ false }}" />
+        <van-cell title="注射时间" value="{{zhu_time}}" clickable center bind:click="openzhu" border="{{ false }}" />
     </view>
     <van-popup round overlay-style="background-color:rgba(0,0,0,0.3)" show="{{ zhu_popup }}" position="bottom" bind:close="closezhu">
-        <van-datetime-picker show-toolbar type="date" value="{{ currentDate }}" min-date="{{ minDate }}"  bind:input="zhuInput" bind:cancel="zhu_cancel" bind:confirm="zhu_confirm" />
+        <van-datetime-picker show-toolbar type="datetime" value="{{ zhu_currentDate }}" min-date="{{ zhu_minDate }}" max-date="{{zhu_maxDate}}" bind:cancel="closezhu" bind:confirm="zhu_confirm" />
     </van-popup>
+    <!-- 反应 -->
     <view class="hou">
-        <van-cell title="注后反应" value="" clickable center bind:click="openfan" border="{{ false }}" />
+        <van-cell title="注后反应" value="{{fan_zhu}}" clickable center bind:click="openfan" border="{{ false }}" />
     </view>
     <van-popup round overlay-style="background-color:rgba(0,0,0,0.3)" show="{{ fan_popup }}" position="bottom" bind:close="closefan">
-        <van-picker show-toolbar columns="{{ fan_columns }}" bind:cancel="fan_cancel" bind:confirm="fan_confirm" />
+        <van-picker show-toolbar columns="{{ fan_columns }}" bind:cancel="closefan" bind:confirm="fan_confirm" />
     </van-popup>
+    <!-- 下次 -->
     <view class="xia">
-        <van-cell title="下次时间" value="" clickable center bind:click="openxia" border="{{ false }}" />
+        <van-cell title="下次时间" value="{{xia_time}}" clickable center bind:click="openxia" border="{{ false }}" />
     </view>
     <van-popup round overlay-style="background-color:rgba(0,0,0,0.3)" show="{{ xia_popup }}" position="bottom" bind:close="closexia">
-        <van-datetime-picker show-toolbar type="datetime" value="{{ currentDate }}" min-date="{{ minDate }}" max-date="{{ maxDate }}" bind:input="xiaInput" bind:cancel="xia_cancel" bind:confirm="xia_confirm" />
+        <van-datetime-picker show-toolbar type="datetime" value="{{ xia_currentDate }}" min-date="{{ xia_minDate }}" max-date="{{ xia_maxDate }}" bind:cancel="closexia" bind:confirm="xia_confirm" />
     </van-popup>
+    <!-- 品牌 -->
     <view class="pin">
-        <van-field value="{{ pai_value }}" label="疫苗品牌" autosize border="{{ false }}" />
+        <van-field maxlength="15" value="{{ id_pai }}" label="疫苗品牌" input-align="right" border="{{ false }}" bind:input="Input_pai" />
     </view>
     <view class="biao">
         <van-cell title="疫苗标签" border="{{ false }}" />
@@ -40,15 +45,16 @@
     </view>
     <view class="guanli">
         <view class="shanchu">
-            <van-button plain  round color="#ff8e38" custom-style="width:230rpx;height:80rpx;">
+            <van-button bind:click="push_delete" plain round color="#ff8e38" custom-style="width:230rpx;height:80rpx;">
                 删 除
             </van-button>
         </view>
         <view class="baocun">
-            <van-button round color="linear-gradient(to bottom right,rgba(255, 115, 90,0.85), rgba(255, 187, 0,0.85))" custom-style="width:230rpx;height:80rpx;">
+            <van-button bind:click="push_wan" round color="linear-gradient(to bottom right,rgba(255, 115, 90,0.85), rgba(255, 187, 0,0.85))" custom-style="width:230rpx;height:80rpx;">
                 保 存
             </van-button>
         </view>
     </view>
-    
+
+    <van-dialog id="van-dialog" />
 </view>
